# credential-rotation

./: .gitignore  CENTRALIZATION_GUIDE.md  CHANGELOG.md  GEMINI.md  INSTALLATION.md  PUBLISHING.md  README.md  pyproject.toml
examples/docker-service-poc/: README.md  docker-compose.yml
examples/docker-service-poc/client/: Dockerfile  client_script.py
examples/docker-service-poc/service/: Dockerfile  server.py
scripts/: migrate_to_profiles.py
src/credential_rotation/: __init__.py
src/credential_rotation/qwen/: __init__.py  cli.py  manager.py  wrapper.py
tests/: __init__.py  test_dynamic_rotation.py  test_qwen.py
