[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credential-rotation"
version = "0.1.0"
description = "Automatic OAuth credential rotation for CLI tools with quota limits"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dawid", email = "dawid@example.com" }
]
keywords = ["credentials", "rotation", "oauth", "quota", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

qwen = [
    # No additional dependencies for Qwen support
]

[project.scripts]
account-qwen = "credential_rotation.qwen.cli:main"

[project.urls]
Homepage = "https://github.com/dawid/credential-rotation"
Documentation = "https://github.com/dawid/credential-rotation#readme"
Repository = "https://github.com/dawid/credential-rotation"
Issues = "https://github.com/dawid/credential-rotation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/credential_rotation"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
